# downpipe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: slow_stream.py  stream_gemini.py  stream_text.py
src/downpipe/: __init__.py
tests/: test_downpipe.py
