[project]
name = "downpipe"
version = "0.1.0"
authors = [
    { name = "Mark McDonald", email = "i@ii.net" }
]
description = "A Unix-friendly streaming Markdown renderer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "markdown-it-py>=3.0.0",
    "linkify-it-py>=2.0.0",
]
license = { text = "MIT" }

[project.scripts]
dp = "downpipe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "google-genai>=1.47.0",
    "pytest>=8.4.2",
]
